# MyTetris

./: .gitignore  CMakeLists.txt  CmakePresets.json  README.md  backup  vcpkg.json
.github/workflows/: build.yml  deploy.yml
src/: Background.hpp  Board.cpp  Board.hpp  Config.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  UIUtils.hpp  main.cpp
